improve image sizes and add meta tags for SEO improvements

--- a/index.html
+++ b/index.html
@@ -2,27 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DriveSensei - Decentralized Storage Solution</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Chakra+Petch:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/hero.css">
-    <link rel="stylesheet" href="css/features.css">
-    <link rel="stylesheet" href="css/roadmap.css">
-    <link rel="stylesheet" href="css/token.css">
-    <link rel="stylesheet" href="css/buttons.css">
-    <link rel="stylesheet" href="css/icons.css">
-    <link rel="stylesheet" href="css/animations.css">
-    <link rel="stylesheet" href="css/particle.css">
-    
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <meta name="description" content="DriveSensei - Enterprise-grade decentralized storage solution with HIPAA compliance and blockchain security. Powered by Solana blockchain for seamless data management.">
+       <meta name="keywords" content="DriveSensei, decentralized storage, HIPAA compliance, blockchain security, Solana, DSS token, data protection">
+       <meta name="author" content="DriveSensei">
+       <meta name="robots" content="index, follow">
+       <meta name="theme-color" content="#6366f1">
+
+       <!-- OpenGraph Tags -->
+       <meta property="og:title" content="DriveSensei - Decentralized Storage Solution">
+       <meta property="og:description" content="Enterprise-grade storage solution with HIPAA compliance and blockchain security. Powered by Solana for seamless data management.">
+       <meta property="og:image" content="/images/logo.svg">
+       <meta property="og:url" content="https://drivesensei.io">
+       <meta property="og:type" content="website">
+       <meta property="og:site_name" content="DriveSensei">
+
+       <!-- Twitter Card Tags -->
+       <meta name="twitter:card" content="summary_large_image">
+       <meta name="twitter:site" content="@drivesensei">
+       <meta name="twitter:title" content="DriveSensei - Decentralized Storage Solution">
+       <meta name="twitter:description" content="Enterprise-grade storage solution with HIPAA compliance and blockchain security. Powered by Solana and Storj for seamless data management.">
+       <meta name="twitter:image" content="/icons/twitter.svg">
+
+       <!-- Canonical URL -->
+       <link rel="canonical" href="https://drivesensei.io">
+
+       <title>DriveSensei - Decentralized Storage Solution</title>
+
+       <link rel="stylesheet" href="css/reset.css">
+       <link rel="stylesheet" href="css/styles.css">
+       <link rel="stylesheet" href="css/navbar.css">
+       <link rel="stylesheet" href="css/hero.css">
+       <link rel="stylesheet" href="css/features.css">
+       <link rel="stylesheet" href="css/roadmap.css">
+       <link rel="stylesheet" href="css/token.css">
+       <link rel="stylesheet" href="css/buttons.css">
+       <link rel="stylesheet" href="css/icons.css">
+       <link rel="stylesheet" href="css/animations.css">
+       <link rel="stylesheet" href="css/particle.css">
+       <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Chakra+Petch:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
         <div class="navbar-container">
             <a href="#" class="logo">
-                <i class="gg-cloud"></i>
+                <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    >
+                    <path
+                        d="M14.738 19.9964C14.8186 19.9988 14.8994 20 14.9806 20C15.656 20 16.2955 19.92 16.91 19.76C16.0433 19.9264 15.0994 20 14.5194 20H7.51941C3.92956 20 1.01941 17.0899 1.01941 13.5C1.01941 9.91015 3.92956 7 7.51941 7H8.73522C10.2013 5.17108 12.4542 4 14.9806 4C17.36 4 19.4 5.12 20.73 6.88C18.98 5.33 16.2 5 14.9806 5C11.6669 5 8.98059 8.68629 8.98059 12H6.98059C6.98059 10.9391 7.1871 9.92643 7.56211 9H7.51941C5.03413 9 3.01941 11.0147 3.01941 13.5C3.01941 15.9853 5.03413 18 7.51941 18H14.5194C14.5926 18 14.6654 17.9988 14.738 17.9964Z"
+                        fill="#fff"
+                    />
+                    <path
+                        d="M15.5 2L22 6V11C22 16.55 18.16 21.74 15 23V20.95C17.9 19.2 20 15.64 20 11V7.39L15.5 4.32V2Z"
+                        fill="#ffffff"
+                    />
+                </svg>
                 <span>DriveSensei</span>
             </a>
             <div class="nav-links">
@@ -42,7 +80,7 @@
                 </a>
             </div>
             <a href="#dss-purchase-guide" class="button button-primary cta-button">Buy DSS</a>
-            
+
         </div>
     </nav>
 
@@ -69,303 +107,97 @@
         <div class="circle-container">
         <div class="circle"></div>
         </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
-    <div class="circle-container">
-        <div class="circle"></div>
-    </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-container">
+            <div class="circle"></div>
+        </div>
+
   </section>
 
     <section id="features" class="features">
