add robots.txt and uglify html + css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="images/logo.svg" type="image/svg+xml">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="DriveSensei - Enterprise-grade decentralized storage solution with HIPAA compliance and blockchain security. Powered by Solana blockchain for seamless data management.">
@@ -28,19 +30,19 @@
     <link rel="canonical" href="https://drivesensei.io">
 
     <title>DriveSensei - Decentralized Storage Solution</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Chakra+Petch:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/hero.css">
-    <link rel="stylesheet" href="css/features.css">
-    <link rel="stylesheet" href="css/roadmap.css">
-    <link rel="stylesheet" href="css/token.css">
-    <link rel="stylesheet" href="css/buttons.css">
-    <link rel="stylesheet" href="css/icons.css">
-    <link rel="stylesheet" href="css/animations.css">
-    <link rel="stylesheet" href="css/particle.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Chakra+Petch:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="css/res.css?v=1" />
+    <link rel="stylesheet" href="css/sty.css?v=1" />
+    <link rel="stylesheet" href="css/featsec.css?v=1" />
+    <link rel="stylesheet" href="css/navi.css?v=1" />
+    <link rel="stylesheet" href="css/heros.css?v=1" />
+    <link rel="stylesheet" href="css/road.css?v=1" />
+    <link rel="stylesheet" href="css/tok.css?v=1" />
+    <link rel="stylesheet" href="css/btns.css?v=1" />
+    <link rel="stylesheet" href="css/ico.css?v=1" />
+    <link rel="stylesheet" href="css/anim.css?v=1" />
+    <link rel="stylesheet" href="css/part.css" />
+    <link rel="stylesheet" href="css/foot.css?v=1" />
 </head>
 <body>
     <nav class="navbar">
@@ -81,11 +83,6 @@
                 </a>
             </div>
             <a href="#dss-purchase-guide" class="button button-primary cta-button">Buy DSS</a>
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
         </div>
     </nav>
 
