--- a/index.html
+++ b/index.html
@@ -595,8 +595,8 @@
     </div>
     </section>
 
-    <footer class="footer">
-        <p class="footer-text">DriveSensei Platform 2024</p>
+    <footer class="foot">
+        <p class="foot-text">DriveSensei Platform 2024</p>
     </footer>
 </body>
 </html>
